--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,12 @@ before_install:
 script:
   - docker run asfandyar9/docker-react npm run test -- --coverage
 
-
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-west-2-12938934"
+  bucket_path: "docker"
+  on:
+    branch: master
